<resources>
    <string name="app_name">HSTracker</string>

    <string name="your_quests">Your Quests:</string>
    <string name="welcome">Welcome to HSTracker!</string>

    <string name="add_quest">Add Quest</string>
    <string name="add_pack">Add Pack</string>
    <string name="add_game">Add Game</string>
    <string name="view_stats">View Stats</string>
    <string name="options">Options</string>

    <string name="select_pack_type">Select the type of pack you are adding</string>
    <string name="add_cards_instructions">Use the +/- buttons to input the number of cards of each type</string>

    <string name="common">Common</string>
    <string name="rare">Rare</string>
    <string name="epic">Epic</string>
    <string name="legendary">Legendary</string>

    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>

    <string name="card_type_regular">Regular</string>
    <string name="card_type_golden">Golden</string>

    <string name="invalid_num_cards">Please enter exactly 5 cards for this pack</string>

    <string name="reset_stats">Reset stats</string>

    <string name="select_deck">Select your deck</string>
    <string name="select_opponent">Select your opponent\'s class</string>
    <string name="next">Next</string>
    <string name="select_result">Did you win?</string>
    <string name="notes">Notes</string>
    <string name="add_deck">Add deck</string>
    <string name="deck_name">Deck name:</string>
    <string name="deck_class">Class:</string>
    <string name="did_you_win">Did you win?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="invalid_deck_name">Please enter the name of your deck.</string>
    <string name="invalid_select_class">Please select the class of your deck.</string>

    <string name="invalid_your_deck">Please select which deck you used.</string>
    <string name="invalid_their_deck">Please select the class of your opponent.</string>
    <string name="invalid_win_loss">Please select the result of your game.</string>

    <string name="quests_tab">Quests</string>
    <string name="packs_tab">Packs</string>
    <string name="games_tab">Games</string>

    <!-- PACKS STATS -->
    <string name="overall_packs_stats">Overall Packs Stats:</string>
    <string name="total_packs">You have opened %1$d Classic packs, %2$d TGT packs, and %3$d WOTOG packs.</string>
    <string name="total_dust">If all cards were dusted, you would have %1$d dust.</string>
    <string name="dust_per_pack">That is an average of %1$.2f dust per pack.</string>

    <string name="total_card_type_stats">Total cards obtained by card type:</string>
    <string name="packs_since_last">Number of %1$s packs since you last opened:</string>

    <!-- GAMES STATS -->
    <string name="overall_stats_title">Overall Stats</string>
    <string name="class_stats_title">Stats by Class</string>
    <string name="stats_wins">Wins: </string>
    <string name="stats_losses">Losses: </string>
    <string name="stats_win_percent">Win percentage:</string>
    <string name="overall">Overall</string>

    <!-- CLASSES -->
    <string-array name="classes">
        <item name="druid">Druid</item>
        <item name="hunter">Hunter</item>
        <item name="mage">Mage</item>
        <item name="paladin">Paladin</item>
        <item name="priest">Priest</item>
        <item name="rogue">Rogue</item>
        <item name="shaman">Shaman</item>
        <item name="warlock">Warlock</item>
        <item name="warrior">Warrior</item>
    </string-array>

    <string name="druid">Druid</string>
    <string name="hunter">Hunter</string>
    <string name="mage">Mage</string>
    <string name="paladin">Paladin</string>
    <string name="priest">Priest</string>
    <string name="rogue">Rogue</string>
    <string name="shaman">Shaman</string>
    <string name="warlock">Warlock</string>
    <string name="warrior">Warrior</string>


    <!-- KEYS-->
    <string name="packs_file">Packs</string>
    <string name="num_packs_key">numPacks</string>
    <string name="cards_per_type_key">cardsPerType</string>
    <string name="type_key">type</string>
    <string name="number_key">number</string>
    <string name="classic_packs_since_key">classicPacksSince</string>
    <string name="tgt_packs_since_key">tgtPacksSince</string>
    <string name="wotog_packs_since_key">wotogPacksSince</string>

    <string name="pack_type_key">pack</string>

    <string name="classic_pack_key">Classic</string>
    <string name="tgt_pack_key">TGT</string>
    <string name="wotog_pack_key">WOTOG</string>

    <string name="regular_common_key">regularCommon</string>
    <string name="golden_common_key">goldenCommon</string>
    <string name="regular_rare_key">regularRare</string>
    <string name="golden_rare_key">goldenRare</string>
    <string name="regular_epic_key">regularEpic</string>
    <string name="golden_epic_key">goldenEpic</string>
    <string name="regular_legendary_key">regularLegendary</string>
    <string name="golden_legendary_key">goldenLegendary</string>

    <string name="decks_file">Decks</string>
    <string name="decks_key">decks</string>
    <string name="deck_name_key">deckName</string>
    <string name="deck_class_key">deckClass</string>
    <string name="wins_key">wins</string>
    <string name="losses_key">losses</string>
    <string name="vs_classes_key">vsClasses</string>
    <string name="overall_games_key">overall</string>

    <string name="fragment_page_key">fragment_page</string>

    <string name="quests_file">Quests</string>
</resources>
