<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mystrel.hstracker.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/your_quests" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1">

        <Button
            android:onClick="addQuest"
            android:text="@string/add_quest" />

        <Button
            android:onClick="addPack"
            android:text="@string/add_pack" />

        <Button
            android:onClick="addGame"
            android:text="@string/add_game" />

        <Button
            android:onClick="viewStats"
            android:text="@string/view_stats" />

        <Button
            android:onClick="viewOptions"
            android:text="@string/options"
            />

    </TableLayout>

</LinearLayout>
