<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"/>

    <com.mystrel.hstracker.ViewStats.PacksStatsRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/commonRow"
        app:packs_stats_row_label="@string/common"/>

    <com.mystrel.hstracker.ViewStats.PacksStatsRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rareRow"
        app:packs_stats_row_label="@string/rare"/>

    <com.mystrel.hstracker.ViewStats.PacksStatsRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/epicRow"
        app:packs_stats_row_label="@string/epic"/>

    <com.mystrel.hstracker.ViewStats.PacksStatsRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/legendaryRow"
        app:packs_stats_row_label="@string/legendary"/>
</LinearLayout>