<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:stretchColumns="*"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TableRow>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:id="@+id/label" />

        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="0dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/regularText"
                android:text="@string/zero" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="40dp"
                    android:id="@+id/regularIncrement"
                    android:text="@string/plus"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="40dp"
                    android:id="@+id/regularDecrement"
                    android:text="@string/minus"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="right"
            android:layout_width="0dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:id="@+id/goldenText"
                android:text="@string/zero" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="40dp"
                    android:id="@+id/goldenIncrement"
                    android:text="@string/plus"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minHeight="0dp"
                    android:minWidth="40dp"
                    android:id="@+id/goldenDecrement"
                    android:text="@string/minus"/>

            </LinearLayout>

        </LinearLayout>

    </TableRow>


</TableLayout>